# Func_speech

./: 使用说明.txt
for_ROS/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
for_ROS/devel/include/xf_mic_asr_offline_line/: Get_Awake_Angle_srv.h  Get_Awake_Angle_srvRequest.h  Get_Awake_Angle_srvResponse.h  Get_Major_Mic_srv.h  Get_Major_Mic_srvRequest.h  Get_Major_Mic_srvResponse.h  Get_Offline_Result_srv.h  Get_Offline_Result_srvRequest.h  Get_Offline_Result_srvResponse.h  Pcm_Msg.h  Set_Awake_Word_srv.h  Set_Awake_Word_srvRequest.h  Set_Awake_Word_srvResponse.h  Set_Led_On_srv.h  Set_Led_On_srvRequest.h  Set_Led_On_srvResponse.h  Set_Major_Mic_srv.h  Set_Major_Mic_srvRequest.h  Set_Major_Mic_srvResponse.h  Start_Record_srv.h  Start_Record_srvRequest.h  Start_Record_srvResponse.h  position.h
for_ROS/devel/lib/pkgconfig/: xf_mic_asr_offline_line.pc
for_ROS/devel/lib/xf_mic_asr_offline_line/: call_recognition  command_recognition  node_feedback  voice_control  wheeltec_mic
for_ROS/src/: CMakeLists.txt
for_ROS/src/xf_mic_asr_offline_line/: CMakeLists.txt  package.xml
for_ROS/src/xf_mic_asr_offline_line/config/: appid_params.yaml
offline_mic/: ch9102_udev.sh  readme
offline_mic/offline_mic/audio/: vvui_deno.pcm
offline_mic/offline_mic/include/: asr_offline_record_sample.h  record.h  user_interface.h
offline_mic/offline_mic/samples/offline_command_sample/src/: CMakeLists.txt  asr_offline_record_sample.c  record.c  speech_recognizer.c
tookits/serial_driver/: 使用说明.txt
tookits/讯飞SDK_xw/: wordlist.txt
tookits/讯飞SDK_xw/samples/asr_sample/: asr_sample.c
(+83 files in other folders)
